--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ body {
    flex-direction: column;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   background: #1F2937
 }
 
 .header {
-    background: #1F2937;
     color: #F9FAF8;
     font-size: 24px;
     font-weight: bold;
@@ -29,4 +29,52 @@ a {
     font-weight:100; 
 }
 
+.hero {
+    display: flex;
+    margin: 120px;
+    justify-content: space-around;
+    color: white;
+}
+
+.hero-left {
+    flex-direction: column;
+    max-width: 50%;
+    margin: auto;
+}
+
+.hero-right{
+   
+
+}
+
+img {
+    max-width: 500px;
+    max-height: 300px;
+}
+
+button {
+    background: #3882f6;
+    border-radius: 25px;
+    color: white;
+    border-color: #3882f6;
+    width: 100px;
+    height: 40px;
+}
+
+.information {
+    background: white;
+    font-size: 36px;
+    font-weight: 900;
+    margin-bottom: 32px;
+    display: flex;
+    justify-content: center;
+}
+
+.pair {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    margin: 52px;
+}
 
