--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+
 body {
    display: flex;
    flex-direction: column;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   background: #1F2937
+   background: #1F2937;
 }
 
 .header {
@@ -30,6 +31,7 @@ a {
 }
 
 .hero {
+    background: #1F2937;
     display: flex;
     margin: 120px;
     justify-content: space-around;
@@ -43,7 +45,7 @@ a {
 }
 
 .hero-right{
-   
+  margin-right: auto;
 
 }
 
@@ -65,9 +67,10 @@ button {
     background: white;
     font-size: 36px;
     font-weight: 900;
-    margin-bottom: 32px;
+    margin-bottom: 0px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .pair {
@@ -76,5 +79,74 @@ button {
     align-items: center;
     width: 200px;
     margin: 52px;
+    font-size: 20px;
+    text-align: center;
 }
 
+.icons {
+    display: flex;
+    direction: column;
+    justify-content: center;
+}
+
+
+.pair div {
+    height: 200px;
+    width: 200px;
+    border: solid rgb(99, 99, 241);
+    border-radius: 25px;
+}
+
+.quotebox {
+    background: #E5E6EB;
+    justify-content: center;
+    margin-top: none;
+}
+
+.quotebox p{
+    font-style: italic;
+    font-size: 36px;
+    color: #1F2937;
+    margin: 15%;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+.action {
+    display: flex;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
+
+.call {
+    display: flex;
+    background: #3882f6;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 800px;
+    border-radius: 10px;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+    display: flex;
+    gap: 16px;
+    padding: 16px;
+}
+
+.call button {
+    margin: 8px;
+}
+.call p {
+    margin-right: 5px;
+    margin-top: 5px;
+}
+
+h3 {
+    margin-bottom: 3px;
+}
